K8S/book-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
 name: booknpservice-srv
spec:
 type: NodePort
 selector:
  app: bookservice
 ports:
 - name: bookservice
   protocol: TCP
   port: 80
   targetPort: 80
