K8S/mssql-book-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mssql-book-depl
spec:
 replicas: 1
 selector:
  matchLabels:
   app: mssql-book
 template:
  metadata:
   labels:
    app: mssql-book
  spec:
   containers:
    - name: mssql-book
      image: mcr.microsoft.com/mssql/server:2017-latest
      ports:
       - containerPort: 1433
      volumeMounts:
       - mountPath: /var/opt/mssql/data
         name: mssqlbookdb
   volumes:
    - name: mssqlbookdb
      persistentVolumeClaim:
       claimName: mssql-claim
---
apiVersion: v1
kind: Service
metadata:
 name: mssqlbook-clusterip-srv
spec:
 type: ClusterIP
 selector:
  app: mssql-book
 ports:
  - name: mssql-book
    protocol: TCP
    port: 1433
    targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
 name: mssqlbook-loadbalancer
spec:
 type: LoadBalancer
 selector:
  app: mssql-book
 ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
