K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-srv
 annotations:
  kubernetes.io/ingress.class: nginx
  nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
 rules:
   - host: acme.com
     http:
      paths:
       - path: /api/book
         pathType: Prefix
         backend:
          service:
           name: book-clusterip-srv
           port:
            number: 80
       - path: /api/review
         pathType: Prefix
         backend:
          service:
           name: review-clusterip-srv
           port:
            number: 80
